# flet_spendings

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  README.md  build_apk.sh  main.py  pyproject.toml  requirements.txt  test_status_summary.md
src/: config.py  exceptions.py  main.py
src/components/: buttons.py  datatables.py  dialogs.py  inputs.py
src/core/entities/: session.py  spending.py  user.py
src/core/repositories/: session_repository.py  spending_repository.py  user_repository.py
src/core/use_cases/: auth_use_cases.py  spending_use_cases.py
src/infrastructure/: container.py
src/infrastructure/repositories/: session_repository_impl.py  spending_repository_impl.py  user_repository_impl.py
src/infrastructure/services/: auth_service.py  spending_service.py
src/pages/: database_page.py  dt_page.py  error_page.py  forgot_password_page.py  home_page.py  login_page.py  profile_page.py  register_page.py  spendings_page.py  verify_page.py
src/presentation/components/: __init__.py  base_component.py  responsive_appbar.py  sidebar.py
src/presentation/pages/: base_page.py
src/services/: crud.py  supabase_service.py
src/shared/config/: __init__.py  config.py
src/utils/: config.py  logger.py
tests/: conftest.py
tests/unit/: create_delete_user.py  test_base_page.py  test_buttons.py  test_config.py  test_crud.py  test_database_page.py  test_datatable_component.py  test_dialogs.py  test_exceptions.py  test_home_page.py  test_inputs.py  test_logger.py  test_main.py  test_profile_page.py  test_responsive_appbar.py  test_sidebar.py  test_supabase_service.py
