[project]
name = "Spendio"
version = "0.2.2"
description = ""
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
  # "cryptography>=45.0.5",
  "certifi==2025.7.14",
  "faker>=37.4.2",
  "flet==0.28.2",
  "httpx==0.27.0",
  "icecream>=2.1.5",
  "loguru>=0.7.3",
  "prettyformatter>=2.0.13",
  "pyjwt>=2.10.1",
  "pytest>=8.4.1",
  "python-dotenv>=1.1.1",
  "supabase==2.10.0",
  "websockets==11.0.3",
]

[tool.flet]
# org name in reverse domain name notation, e.g. "com.mycompany".
# Combined with project.name to build bundle ID for iOS and Android apps
org = "com.mycompany"

# project display name that is used as an app title on Android and iOS home screens,
# shown in window titles and about app dialogs on desktop.
product = "Spendio"

# company name to display in about app dialogs
company = "Flet"

# copyright text to display in about app dialogs
copyright = "Copyright (C) 2025 by DummyDev"

# Include the .env file in the build
include = [".env"]

[tool.flet.app]
path = "src"


[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.2",
]

[tool.flet.android]
min_sdk_version = 21
target_sdk_version = 34

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.2"}
